[workspace]
members = [
  "crates/orpheum-core",
  "crates/orpheum-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ericwburden/orpheum"
homepage = "https://github.com/ericwburden/orpheum"
version = "0.3.0"

[workspace.dependencies]
assert_cmd = "2.0.17"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.38", features = ["derive"] }
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
thiserror = "2.0.17"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
